# jordan-rustume

./: .dockerignore  .gitignore  Dockerfile  README.md  docker compose.yml  docker-compose.yml
angularize/: README.md  angular.json  package-lock.json  package.json
angularize/src/: index.html
angularize/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
angularize/src/app/authentication/login/: login.component.html  login.component.ts
angularize/src/app/authentication/signup/: signup.component.html  signup.component.ts
angularize/src/app/chatroom/: chatroom.component.html  chatroom.component.scss  chatroom.component.ts
angularize/src/app/chatroom/message-bar/: message-bar.component.html  message-bar.component.scss  message-bar.component.ts
angularize/src/app/home/: home.component.html  home.component.ts
angularize/src/app/home/resume-items/: resume-items.component.html  resume-items.component.spec.ts  resume-items.component.ts  test.ts
angularize/src/app/home/room-list/: room-list.component.html  (+2 more)
angularize/src/app/models/: room.ts  subject_room.ts  user.ts
angularize/src/app/services/: room.service.ts  user.service.ts
angularize/src/app/test_backend/: in-memory-data.service.ts
rustume/: Cargo.toml  cors_old.txt  rocket.toml
rustume/migrations/2023-05-28-011229_resume_user/: down.sql  up.sql
rustume/src/: authentication.rs  charrooms.rs  main.rs  models.rs  schema.rs  user_rooms.rs
rustume/src/models/: client_to_room.rs  room.rs  room_subject.rs  user.rs
rustume/src/schema/: user.rs
