[package]
name = "rustume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json","secrets"] }
diesel = { version = "2.0.4", features = ["postgres"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_postgres_pool"] }
serde = "1.0.163"
rocket_cors = "0.5.2"
lettre = { version = "0.10.4", features = ["tokio1", "tokio1-native-tls"] }
lettre_email = "0.9.4"
tokio = { version = "1", features = ["full"] }